Uebungen/ueb02/ueb02-BlueJ/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/usr/lib/jvm/java-8-openjdk-amd64/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/usr/share/bluej/bluejcore.jar:/usr/share/bluej/junit-4.11.jar:/usr/share/bluej/hamcrest-core-1.3.jar:/usr/share/bluej/lang-stride.jar:/usr/share/bluej/userlib/pi4j-core.jar:/usr/share/bluej/userlib/pi4j-service.jar:/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/usr/share/bluej/userlib/pi4j-device.jar:/home/leparesseux/Bureau/java-programmierung-1/Htw18-19_Java/Uebungen/ueb02/ueb02-BlueJ
-d
/home/leparesseux/Bureau/java-programmierung-1/Htw18-19_Java/Uebungen/ueb02/ueb02-BlueJ/doc
-encoding
UTF-8
-charset
UTF-8
/home/leparesseux/Bureau/java-programmierung-1/Htw18-19_Java/Uebungen/ueb02/ueb02-BlueJ/src/artikel/ArtikelDialog.java
<---- end of javadoc command ---->
Loading source file /home/leparesseux/Bureau/java-programmierung-1/Htw18-19_Java/Uebungen/ueb02/ueb02-BlueJ/src/artikel/ArtikelDialog.java...
/home/leparesseux/Bureau/java-programmierung-1/Htw18-19_Java/Uebungen/ueb02/ueb02-BlueJ/src/artikel/ArtikelDialog.java:107: error: ';' expected
            return new Artikel(nummer, name)
                                            ^
1 error
